# computational-life

./: Cargo.toml  DIVERGENCES.md  README.md
.github/workflows/: rust.yml
openspec/: project.md
openspec/changes/add-core-engine-and-bff/: tasks.md
openspec/changes/add-forth-and-2d-simulation/: proposal.md  tasks.md
openspec/changes/add-live-visualization/: proposal.md  tasks.md
openspec/changes/add-surface-geometry/: proposal.md  tasks.md
openspec/changes/add-visualization-color-modes/: proposal.md
openspec/changes/optimize-2d-live-viewer/: proposal.md  tasks.md
openspec/specs/bff-interpreter/: spec.md
openspec/specs/bits-interpreter/: spec.md
openspec/specs/complexity-measurement/: spec.md
openspec/specs/echo-interpreter/: spec.md
openspec/specs/forth-interpreter/: spec.md
openspec/specs/live-visualization/: spec.md
openspec/specs/program-execution/: spec.md
openspec/specs/program-viewer/: spec.md
openspec/specs/qop-interpreter/: spec.md
openspec/specs/rig-interpreter/: spec.md
openspec/specs/simulation-cli/: spec.md
openspec/specs/simulation-metrics/: spec.md
openspec/specs/skim-interpreter/: spec.md
openspec/specs/soup-simulation/: spec.md
openspec/specs/subleq-interpreter/: spec.md
openspec/specs/surface-topology/: spec.md
proptest-regressions/: tide.txt  z80.txt
src/: bff.rs  bits.rs  echo.rs  edsac.rs  edvac.rs  forth.rs  ias.rs  lib.rs  main.rs  metrics.rs  mos6502.rs  pdp1.rs  qop.rs  rig.rs  skim.rs  soup.rs  soup2d.rs  ssem.rs  subleq.rs  substrate.rs  surface.rs  uxn.rs  viz.rs  z3.rs  z80.rs
(+47 files in other folders)
